add all the codes

--- a/index.html
+++ b/index.html
@@ -371,6 +371,65 @@
                 See All Packages
             </button>
            </div>
+ </section>
+
+
+        <section>
+
+               <div class="section">
+                <!--section info-->
+                <div class="sec-info">
+                    <h1>A Simple Perfect Place To Get Lost</h1>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+                    <ul class="sec-listed">
+                        <li>
+                            Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.
+                        </li>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                        
+
+                    </ul>
+
+                    <button class="sec-button">
+                        See More
+                    </button>
+
+
+                </div>
+                <!--section image-->
+                <div class="sec-image">
+                   
+                    <p>Watch our mountains in Bangladesh</p>
+                     <img src="bd-mountain.png" alt="">
+                     <div class="top-img">
+                        <img src="Group 40071 (2).png" alt="">
+                     </div>
+
+                </div>
+               </div>
+
+ </section>
+
+ <section>
+            <!--news form-->
+             <div class="news">
+
+                <div class="news-form">
+
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+
+             </div>
 
 
 
@@ -390,17 +449,7 @@
 
 
 
-
-
-
-
-
-
-
-            </section>
-
-
-
+ </section>
 
 
 
