add all the codes

--- a/index.html
+++ b/index.html
@@ -411,68 +411,44 @@
  </section>
 
  <section>
-            <!--news form-->
+            
              <div class="news">
+                <!--news form-->
+                <div class="newers">
+                    <h3>Newsletter</h3>
+                    <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                    <hr class="size">
 
-                <div class="news-form">
+                    <form action="action/page.php">
+
+                        <label for="name">
+                            <input type="text" name="name" id="name" placeholder="Enter your name" required class="named">
+                        </label> <br>
+                        <label for="email"> 
+                            <input type="email" name="email" id="email" placeholder="Enter your email" required class="named">
+
+                        </label> <br>
+
+                          <label for="subscribe">
+                            <input type="button" value="Subscribe" class="sub">
+                          </label>
+                        </form>
+
 
                 </div>
+                <!--news image-->
 
-
-
-
-
-
-
-
-
-
-
-
+                <div class="news-image">
+                    <img src="Rectangle 8 (1).png" alt="">
+                    <div class="saving">
+                        <p>Travel.com</p>
+                        <h1>Save up to 70%</h1>
+                    </div>
+                </div>
              </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- </section>
-
-
-
-
-
-
-
-
-
-
-    </main>
+</section>
+  </main>
     
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -481,29 +457,44 @@
 <footer>
 
 
+    <div class="footer">
+       <!--foot title-->
+        <div class="footer-heading">
+            <div class="foot-img">
+                <img src="Group 40071 (2).png" alt="">
+            </div>
+            <div class="foot-title">
+                <h3>Hero <span class="orange">Travel</span></h3>
+            </div>
+        </div>
+
+        <!--foot-info-->
+
+        <div class="foot-info">
+            <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+        </div>
+
+        <!--foot website icons-->
+
+        <div class="footer-images">
+            <img src="twitter-back.png" alt="">
+            <img src="facebook-black.png" alt="">
+            <img src="insta-black.png" alt="">
+            <img src="reddit-black.png" alt="">
+
+        </div>
+
+        <hr class="shape">
 
 
+        <div class="footer-copy">
+            <p>2024,All Rights Reserved</p>
+        </div>
 
-
-
-
-
-
+</div>
 
 
 </footer>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
