add all the new codes

--- a/index.html
+++ b/index.html
@@ -429,11 +429,11 @@
                     <div class="mal-indo">
                         <div class="mal">
                             <p>Maldives</p>
-                            <img src="Rectangle 5.png" alt="">
+                        <a href="contact.html" target="_blank"><img src="Rectangle 5.png" alt=""></a>
                         </div>
                         <div class="indo">
                             <p>Indonesia</p>
-                            <img src="Rectangle 8.png" alt="">
+                         <a href="contact.html" target="_blank">  <img src="Rectangle 8.png" alt=""></a>
                         </div>
                     </div>
                 
@@ -442,15 +442,15 @@
                     <div class="sl-nm">
                         <div class="slk">
                             <p>Srilanka</p>
-                            <img src="Rectangle 6.png" alt="">
+                        <a href="contact.html" target="_blank"><img src="Rectangle 6.png" alt=""></a>
                         </div>
                         <div class="north">
                             <p>North America</p>
-                            <img src="Rectangle 7.png" alt="">
+                          <a href="contact.html" target="_blank">  <img src="Rectangle 7.png" alt=""></a>
                         </div>
                         <div class="kashmir">
                             <p>Kashmir</p>
-                            <img src="Rectangle 9.png" alt="">
+                         <a href="contact.html" target="_blank"> <img src="Rectangle 9.png" alt=""></a>
                         </div>
                     </div>
                     <!--third box-->
@@ -459,11 +459,11 @@
                         
                         <div class="bds">
                             <p>Bangladesh</p>
-                            <img src="Rectangle 11.png" alt="">
+                        <a href="contact.html" target="_blank"> <img src="Rectangle 11.png" alt=""></a>
                         </div>
                         <div class="bans">
                             <p>Bandarban</p>
-                            <img src="Rectangle 10.png" alt="">
+                         <a href="contact.html" target="_blank"> <img src="Rectangle 10.png" alt=""></a>
                         </div>
                     </div>
 
