--- a/sub.html
+++ b/sub.html
@@ -7,15 +7,145 @@
     <link rel="stylesheet" href="style.css">
 
     <title>Hero-Travel-Subscription</title>
+    <style>
+
+/* Reset default padding and margin */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+h1.sub-intro {
+    text-align: center;
+    color: #333;
+    margin-bottom: 20px;
+    font-size: 1.8em;
+}
+
+.form-list {
+    width: 100%;
+    max-width: 500px;
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.fill {
+    text-align: center;
+    font-size: 1.5em;
+    color: #444;
+    margin-bottom: 20px;
+}
+
+.form-names {
+    font-weight: bold;
+    color: #555;
+    font-size: 0.9em;
+}
+
+.form-list label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+}
+
+.form-box {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 0.9em;
+    background-color: #f9f9f9;
+    color: #333;
+}
+
+.form-box:focus {
+    border-color: #007bff;
+    background-color: #fff;
+    outline: none;
+}
+
+.bookings-now {
+    width: 100%;
+    padding: 12px;
+    font-size: 1em;
+    font-weight: bold;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.bookings-now:hover {
+    background-color: #0056b3;
+}
+
+/* Remove underline from button link */
+.bookings-now a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.bookings-now a:hover {
+    text-decoration: none;
+}
+
+.sub-form-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.sub-form-heading {
+    margin-top: 100px;
+
+}
+
+.sub-form-heading > h1 {
+    font-size: 38px;
+    color: #f9f9f9;
+}
+
+body {
+    background-color:#ff5500cb ;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </style>
 </head>
 <body>
 
+    <div class="sub-form-div">
+      <div class="sub-form-heading">
     <h1 class="sub-intro">Your subscription is done!</h1>
 
-   
+   </div>
 
         
-
+       <div class="sub-form-names">
 
        <form action="" class="form-list">
         <h2 class="fill">Fill The Form To Book Your Trip Now!</h2>
@@ -339,9 +469,9 @@
             </button>
 
             </form>
+</div>
 
-
-
+</div>
 
 
 
